--- a/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
+++ b/app/scheduler/schedule-block-drafts/schedule-block-drafts.html
@@ -34,8 +34,8 @@
                     </span>
                 </div>
             </md-toolbar>
-            <md-virtual-repeat-container ng-click="showDatePicker = false" flex id="scheduleDraftDataRepeat">
-                <div md-virtual-repeat="item in filteredDraftItems = (vm.scheduleDraftData | regexSearch:vm.draftsOrderByFields:vm.q | orderBy:vm.draftsOrderBy:vm.draftsOrderBy.reverse)"
+            <div ng-click="showDatePicker = false" flex id="scheduleDraftDataRepeat">
+                <ng-repeat="item in filteredDraftItems = (vm.scheduleDraftData | regexSearch:vm.draftsOrderByFields:vm.q | orderBy:vm.draftsOrderBy:vm.draftsOrderBy.reverse) track by item.id"
                     layout="row" ng-click="vm.setSelectedScheduleDraft(item)" ng-class="{'selected-schedule-row md-whiteframe-z3': item === vm.selectedScheduleDraft}"
                     class="schedule-draft-item" layout-align="start center" style="padding: 0 4px">
                     <md-progress-linear md-theme="grey" ng-if="item.verification_state === 'VERIFYING'" class="md-primary progress-bar-fill"
@@ -97,7 +97,7 @@
                         </md-menu-content>
                     </md-menu>
                 </div>
-            </md-virtual-repeat-container>
+            </div>
         </div>
 
         <div flex layout="column" style="max-width: 400px; min-width: 400px; margin-left: 8px"
