--- a/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
+++ b/app/scheduler/subarrays-draft-assignment/subarrays-draft-assignment.html
@@ -157,7 +157,7 @@
                     placeholder="Search Approved..." />
             </div>
         </md-toolbar>
-        <div flex>
+        <div flex style="overflow: auto">
             <div ng-repeat="item in vm.scheduleDraftData | filter:{sub_nr:null, state:'APPROVED'} | regexSearch:vm.draftsOrderByFields:vm.q | orderBy:id_code:true track by item.id"
                 title="{{item.id_code}} - {{item.description}} - {{item.type}} - {{item.desired_start_time}}"
                 ng-class="{'selected-resource-item': item.selected}" class="schedule-draft-item" layout="row"
