--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 <script src="app/health/receptor-health/receptor-health.js"></script>
 <script src="app/health/receptor-status/receptor-status.js"></script>
 <script src="app/health/receptor-pointing/receptor-pointing.js"></script>
+<script src="app/health/custom-health/custom-health.js"></script>
 <script src="app/health/config-health-view/config-health-view.js"></script>
 <script src="app/sensor-graph/sensor-graph.js"></script>
 <script src="app/sensor-list/sensor-list.js"></script>
@@ -154,9 +155,9 @@
                         <div class="menu-item menu-item-indented" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('receptorHealth')">
                             <md-button><span class="fa fa-th-large"></span><span>Receptor Health</span></md-button>
                         </div>
-                        <!-- <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('customHealth')">
+                        <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('customHealth')">
                             <md-button><span class="fa fa-heartbeat"></span><span>Custom Health</span></md-button>
-                        </div> -->
+                        </div>
                         <!-- <div class="menu-item" layout="row" layout-align="start center" ng-click="vm.sideNavStateGo('activity')">
                             <md-button><span class="fa fa-dashboard"></span><span>System Activity</span></md-button>
                         </div> -->
