--- a/app/sensor-groups/sensor-groups.html
+++ b/app/sensor-groups/sensor-groups.html
@@ -52,7 +52,7 @@
             </div>
             <div ng-repeat="sensor in sensors = (vm.subscribedSensors | filter:vm.filterByNotNominal | regexSearch:vm.sensorsOrderByFields:vm.q | orderBy:vm.sensorsOrderBy.value:vm.sensorsOrderBy.reverse) track by $index" class="resource-sensor-item"
                 ng-class="{'selected-for-chart-row': sensor.selectedForChart}" layout="row" layout-align="start center">
-                <span title="{{sensor.original_name + ' - Description: ' + sensor.description + ' - Units: ' + sensor.units + ' - Type: ' + sensor.type}}" class="resource-sensor-name">{{sensor.original_name}}</span>
+                <span title="{{sensor.original_name + ' - Description: ' + sensor.description + ' - Units: ' + sensor.units + ' - Type: ' + sensor.type}}" class="resource-sensor-name">{{sensor.original_name? sensor.original_name: sensor.name}}</span>
                 <span class="resource-sensor-status-item" ng-class="vm.sensorClass(sensor.status)">{{vm.sensorValues[sensor.name].status}}</span>
                 <span class="resource-sensor-time-item">{{vm.sensorValues[sensor.name].date}}</span>
                 <span title="{{vm.sensorValues[sensor.name].value}}" class="resource-sensor-value-item" ng-click="vm.displaySensorValue($event, vm.sensorValues[sensor.name]); $event.stopPropagation();">{{vm.sensorValues[sensor.name].value}}</span>
