--- a/app/widgets/navigation/navigation-widget-blocks.html
+++ b/app/widgets/navigation/navigation-widget-blocks.html
@@ -68,7 +68,7 @@
             <md-button class="md-raised md-primary" ng-click="$root.openSystemLogger()"><span class="fa fa-file-text-o"></span>System Logs</md-button>
             <md-button class="md-raised md-primary" ng-click="$root.openKibanaInNewTab('katcpmsgs')"><span class="fa fa-file-text"></span>KATCP Logs</md-button>
             <md-button class="md-raised md-primary" ng-click="$root.openUrlInNewTab('https://drive.google.com/drive/folders/0B8fhAW5QnZQWVkdXYm1GTnZ2X1k')"><span class="fa fa-google"></span>CAM Deployment Docs</md-button>
-            <md-button class="md-raised md-primary"><span class="fa fa-area-chart"></span><span>Ganglia Monitoring</md-button>
+            <md-button class="md-raised md-primary" ng-click="$root.openGangliaLink()"><span class="fa fa-area-chart"></span><span>Ganglia Monitoring</md-button>
         </div>
     </div>
 </div>
